# ShrohaChat

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  test_server.py  演示幻灯片.pptx
docs/: .~lock.ShirohaChat项目文档 .odt#  CONTRIBUTING.md  ShirohaChat项目文档 .odt  ShirohaChat项目文档.md  ShirohaChat项目文档.odt
docs/HanQin_Chen/: ShirohaChat项目文档 (write_by_HanQin_Chen).odt  ShirohaChat项目文档(write_by_HanQin_Chen).odt
docs/vpp/: 架构设计图.vpp  活动图.vpp  状态机图.vpp  用况图.vpp  类图.vpp  通信图.vpp  部署图.vpp  顺序图.vpp
docs/王俊民/: ShirohaChat项目文档.odt
qml/: Main.qml
qml/components/: Avatar.qml  InputBar.qml  MessageBubble.qml
qml/views/: ChatView.qml  SessionSidebar.qml
src/: CMakeLists.txt
src/app/: CMakeLists.txt  chat_controller.cpp  chat_controller.h  config.h  local_db.cpp  local_db.h  main.cpp  network_service.cpp  network_service.h
src/domain/: CMakeLists.txt  message.cpp  message.h  session.cpp  session.h  user.cpp  user.h
src/models/: CMakeLists.txt  message_list_model.cpp  message_list_model.h  session_list_model.cpp  session_list_model.h
愿景与需求分析/: .~目愿景与需求.docx  项目愿景与需求.docx
文档/: ShirohaChat项目文档.odt
